--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,9 +10,31 @@
         android:fullBackupContent="@xml/backup_rules"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.TccFrontMobileUsuario"
-        tools:targetApi="31">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31" >
+        <activity
+            android:name=".NovoChamado"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.NovoChamado"
+            android:exported="false"
+            android:label="@string/title_activity_novo_chamado" />
+        <activity
+            android:name=".SobreApp"
+            android:exported="false" />
+        <activity
+            android:name=".Cadastro"
+            android:exported="false" />
+        <activity
+            android:name=".DetalhesChamadoAberto"
+            android:exported="false" />
+        <activity
+            android:name=".DetalhesChamadoEmAndamento"
+            android:exported="false" />
+        <activity
+            android:name=".HomepageUsuario"
+            android:exported="false" />
         <activity
             android:name=".PrimeiroAcesso"
             android:exported="false" />
@@ -20,7 +43,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
