--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".DetalhesOrdemServicoAberta"
+            android:exported="false" />
+        <activity
+            android:name=".CadastroOperario"
+            android:exported="false" />
+        <activity
+            android:name=".HomepageOperario"
+            android:exported="false" />
+        <activity
             android:name=".EsqueceuSenha"
             android:exported="false" />
         <activity
