--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".OperarioRedirecionar"
+            android:exported="false" />
+        <activity
+            android:name=".operario.OperarioAtualizarStatus"
+            android:exported="false" />
+        <activity
             android:name=".SobreAppLogadoUsuario"
             android:exported="false" />
         <activity
