--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".usuario.DetalhesChamadoEncerrado"
+            android:exported="false" />
+        <activity
             android:name=".operario.OperarioRedirecionar"
             android:exported="false" />
         <activity
